# pdhcp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  bsd.go  dhcp.go  dhcpv4.go  go.mod  go.sum  linux.go  main.go  other.go  raw_bsd.go  raw_linux.go  raw_other.go  raw_unsupported.go
debian/: changelog  control  install  pdhcp.default  pdhcp.init  pdhcp.service  pdhcp.upstart  rules
src/: bsd.go  dhcp.cpp  dhcp.h  linux.go  main.go  pdhcp.cpp  util.cpp  util.h
support/: Makefile  http-backend-slave.conf  http-backend.conf  http-backend.go  local-backend.py  remote-backend.php
support/conf.d/: base.conf  bootp.snippet  zone1.conf
